--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#317EFB">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="Weather PWA">
+ <!-- ios support -->
+<link rel="apple-touch-icon" href="/icons/icon-192x192.png">
   <link rel="shortcut icon" href="icons/icon-192x192.png" type="image/x-icon">
-
+ 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="manifest" href="manifest.Json">
