--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
-  <link rel="manifest" href="manifest.Json">
+  <link rel="manifest" href="/manifest.json">
   <title>Budget Tracker</title>
 </head>
 <body>
